# polaris-reporting-api

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Makefile  README.md  pyproject.toml  run_local.sh  tox.ini
.circleci/: config.yml  dhos-reporting-api.tml  run_integration_tests.sh
.infra/: install-upgrade-az-uk-dev.sh  install-upgrade-az-uk-nonprod.sh  install-upgrade-az-uk-prod.sh
.infra/helm-chart/dhos-reporting-api/: Chart.yaml  values-az-uk-dev-upstream-api001-secrets-sops.yaml  values-az-uk-dev-upstream-api001.yaml  values-az-uk-nonprod-upstream-api001-secrets-sops.yaml  values-az-uk-nonprod-upstream-api001.yaml  values-az-uk-prod006-secrets-sops.yaml  values-az-uk-prod006.yaml  values-az-us-dev-upstream-api001-secrets-sops.yaml  values-az-us-dev-upstream-api001.yaml  values-az-us-nonprod-upstream-api001-secrets-sops.yaml  values-az-us-nonprod-upstream-api001.yaml  values.yaml  (+2 more)
dhos_reporting_api/: app.py  config.py
dhos_reporting_api/blueprint_api/: __init__.py  controller.py
dhos_reporting_api/blueprint_development/: __init__.py  controller.py
dhos_reporting_api/helpers/: cli.py
dhos_reporting_api/models/: active_patients.py  api_spec.py  created_patients.py
dhos_reporting_api/openapi/: openapi.yaml
docs/: make_schema.py  schema.dot  schema.plantuml
integration-tests/: Dockerfile  README.md  docker-compose.yml  reporting.py  requirements.txt
integration-tests/clients/: reporting_client.py
integration-tests/features/: reporting.feature
integration-tests/steps/: reporting.py
migrations/versions/: aaec857105ec_active_users.py
tests/: conftest.py  test_api.py  test_controller.py  test_development.py  test_openapi.py
(+5 files in other folders)
